import { NestFactory } from '@nestjs/core';
import { MicroserviceOptions, Transport } from '@nestjs/microservices';
import { ValidationPipe } from '@nestjs/common';
import { join } from 'path';
import { AppModule } from './app.module.js';

async function bootstrap() {
  const grpcPort = process.env.GRPC_PORT || '50070';
  const grpcUrl = process.env.GRPC_URL || `0.0.0.0:${grpcPort}`;

  const app = await NestFactory.createMicroservice<MicroserviceOptions>(AppModule, {
    transport: Transport.GRPC,
    options: {
      package: 'calendar',
      protoPath: join(process.cwd(), 'proto/calendar/calendar.proto'),
      url: grpcUrl,
      maxReceiveMessageLength: 20 * 1024 * 1024,
      maxSendMessageLength: 20 * 1024 * 1024,
      loader: {
        keepCase: false,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true,
      },
    },
  });

  app.useGlobalPipes(
    new ValidationPipe({
      whitelist: true,
      forbidNonWhitelisted: true,
      transform: true,
    }),
  );

  await app.listen();

  const dbHost = process.env.DB_HOST || 'localhost';
  const dbPort = process.env.DB_PORT || '5432';
  const dbName = process.env.DB_DATABASE || 'calendar_db';

  console.log(`
â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
â•‘        ğŸ“… Service Calendar - gRPC Microservice               â•‘
â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£
â•‘   gRPC URL:    ${grpcUrl.padEnd(46)} â•‘
â•‘   Database:    ${`${dbHost}:${dbPort}/${dbName}`.padEnd(46)} â•‘
â•‘   Environment: ${(process.env.NODE_ENV || 'development').padEnd(46)} â•‘
â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£
â•‘   Features:                                                  â•‘
â•‘   - Calendar Engine (plannedDebitDate calculation)           â•‘
â•‘   - Lots L1-L4 + Fixed Day configuration                     â•‘
â•‘   - Priority: Contract > Client > Company > System           â•‘
â•‘   - Holiday management by zone/country                       â•‘
â•‘   - CSV Import with dry-run validation                       â•‘
â•‘   - Volume heatmap & thresholds                              â•‘
â•‘   - Complete audit trail                                     â•‘
â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£
â•‘   gRPC Services:                                             â•‘
â•‘   - CalendarEngineService.CalculatePlannedDate               â•‘
â•‘   - DebitConfigurationService.ResolveConfiguration           â•‘
â•‘   - HolidayService.CheckDateEligibility                      â•‘
â•‘   - CalendarAdminService.GetCalendarView                     â•‘
â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
  `);
}

bootstrap();
